--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-
-
-#title {
+.title {
     text-align:center; 
 }
 
@@ -16,16 +14,73 @@
     margin:100px auto;
     width:100px;
     height:100px;
+    background-color:white;
 }
 #two {
     border:3px solid black;
     margin:100px auto;
     width:300px;
     height:300px;
+    background-color:blue;
 }
 #three {
     border:3px solid black;
     margin:100px auto;
     width:500px;
     height:500px;
+    background-color:red;
+}
+
+#tableception {
+    padding:0;
+    margin:0;
+    margin: auto;
+    width: 536px;
+    height: 536px;
+
+    box-sizing:border-box;
+}
+
+td {
+    width:100px;
+    height:100px;
+}
+
+.top-left {
+    border-top:3px solid black;
+    border-left:3px solid black;
+}
+.top-right {
+    border-top:3px solid black;
+    border-right:3px solid black;
+}
+.bottom-left {
+    border-bottom:3px solid black;
+    border-left:3px solid black;
+}
+.bottom-right {
+    border-bottom:3px solid black;
+    border-right:3px solid black;
+}
+.top {
+    border-top:3px solid black;
+}
+.bottom {
+    border-bottom:3px solid black;
+}
+.left {
+    border-left:3px solid black;
+}
+.right {
+    border-right:3px solid black;
+}
+.tbl-three {
+    background-color:red;
+}
+.tbl-two {
+    background-color:blue;
+}
+#middle {
+    border:3px solid black;
+    background-color:white;
 }
